Latest developments: correcting id name anchor link for main-content and checking it on mobile devices.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,15 +2,10 @@
 /* Start main CSS styles ---------------------------------------------*/
 
 /* BODY ****************************************************************** */
-html {
-  display: block;
-  margin: 0;
-  padding: 0;
-}
 body {  
-  font-family: Helvetica, sans-serif;
-   overflow-x:hidden;
+  font-family: Helvetica, Arial, sans-serif;  
   -webkit-font-smoothing: subpixel-antialiased;
+  overflow-x:hidden;  
 }
 
 /* All content wrapper*/
@@ -305,7 +300,7 @@ header {
   text-align: center;
   left: 0;
   right: 0;  
-  top:0;  
+  top:0;   
  }
 
  body#landing-replay header { 
@@ -981,8 +976,7 @@ section#search-tools form input[type="text"].calendar-year-input, input[type="te
   max-width: 45px;
   height: 39px;
   padding-bottom: 12px;
-  padding-top: 2px;
-  font-family: inherit;
+  padding-top: 2px; 
   font-size: 17.2px;
   text-align: center;
   color: white;
@@ -2177,8 +2171,7 @@ section#pages-results ul:hover, section#pages-results ul:active {
   box-shadow: 0px 3px 5px 0px rgb(0 0 0 / 20%);
 }
 
-section#pages-results ul > li > p {
-  font-family: arial,sans-serif;
+section#pages-results ul > li > p {  
   color: #4d5156;
   font-size: 13px;
   font-weight: bold;
@@ -2717,7 +2710,6 @@ body#arquivo-404 section a:hover {
 */
 @media (min-width: 481px) and (max-width: 767px) { 
    
-  header {outline:1px solid red}
   header button#nav-menu-button-left {
     display: none;
   }
